--- a/Primer entrega.ipynb
+++ b/Primer entrega.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyPXO/KTO8dNY1tILZB7uO+K",
+      "authorship_tag": "ABX9TyPzEo5AaOJbFPLP+L2MrzAl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "pri_dec = df['Año de lanzamiento'].between(1996, 2006)\n",
         "seg_dec = df['Año de lanzamiento'].between(2007, 2016)\n",
         "\n",
-        "##ESTO DA EL PROMEDIO DE PUNTAJES ENTRE LOS USUARIOS Y LA CRITICA\n",
+        "##ESTO DA EL PUNTAJE PROMEDIO ENTRE LOS USUARIOS Y LA CRITICA\n",
         "df['promedio de puntaje']= (df['Puntuacion de criticos'] + df['Puntaje de Usuario'])/2\n",
         "\n"
       ]
@@ -840,11 +840,11 @@
         "print(f\"\\n\\n{'Suma total de los juegos mas vendidos por consola'}\\n\\n\",cma_redondeo,f\"\\n\\n{'**El punto marca el millon*'}*\")\n"
       ],
       "metadata": {
-        "id": "Y65uvv94jXcL",
-        "outputId": "c52fbff5-fef0-47cd-b2b9-0fb61bd454c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y65uvv94jXcL",
+        "outputId": "c52fbff5-fef0-47cd-b2b9-0fb61bd454c6"
       },
       "execution_count": 34,
       "outputs": [
@@ -926,11 +926,11 @@
         "print(F\"\\n\\n{'Top de los generos con el mayor puntaje promedio'}\\n\\n\",puntaje_genero)"
       ],
       "metadata": {
-        "id": "zJeH7Br1gt1j",
-        "outputId": "80f3fa6f-bd07-48a9-f80b-c345113be62f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zJeH7Br1gt1j",
+        "outputId": "80f3fa6f-bd07-48a9-f80b-c345113be62f"
       },
       "execution_count": 48,
       "outputs": [
