--- a/Primer entrega.ipynb
+++ b/Primer entrega.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyPzEo5AaOJbFPLP+L2MrzAl",
+      "authorship_tag": "ABX9TyNrZYd6WZSmZDXpMPyAF/ei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 52,
       "metadata": {
         "id": "BA5wxy4fm_5b"
       },
@@ -41,7 +41,7 @@
         "import pandas as pd\n",
         "\n",
         "\n",
-        "url = '/content/drive/MyDrive/Coder/Data Science/proyecto DC Diego Dopazo/Video_Games.csv'\n",
+        "url = 'https://raw.githubusercontent.com/ddopazo92/Introduccion_datascience_diego_dopazo/refs/heads/main/Video_Games.csv'\n",
         "\n",
         "df = pd.read_csv(url, sep=';')\n",
         "\n",
@@ -105,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XoEyGMkqlOZE",
-        "outputId": "e73a7644-1cef-4bb0-df20-f4b15e05ec04"
+        "outputId": "05da83cf-b47a-41dd-9cb0-60bf8dbd9aec"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
     {
       "cell_type": "code",
       "source": [
-        "##PUNTUACION SEGUN LA CRITICA PARA PUBLICADOR, DESARROLLADOR Y JUEGO\n",
+        "##PUNTUACION SEGUN LOS USUARIOS PARA PUBLICADOR, DESARROLLADOR Y JUEGO\n",
         "\n",
         "#PUBLICADOR con los juegos con mayor, menor y el promedio de puntos segun los usuarios en orden descendente\n",
         "pje_usu_publicador = df.loc[(df['Puntaje de Usuario'] > 0) & (df['Publicador'])].groupby('Publicador').agg({'Puntaje de Usuario':['mean','min','max','count']})\n",
@@ -395,6 +395,7 @@
       "source": [
         "\n",
         "##JUEGOS CON MAYORES VENTAS POR REGION Y MUNDIAL\n",
+        "\n",
         "ventas_usa = df[['Ventas USA','Juego','Publicador','Desarrollador','Año de lanzamiento']]\n",
         "venta_usa = ventas_usa.sort_values(by='Ventas USA', ascending=False)\n",
         "\n",
@@ -828,25 +829,27 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "## EL AÑO EN QUE SE VENDIO MAS JUEGOS POR CONSOLA\n",
         "\n",
         "pcva = df.groupby('Consola')['Año de lanzamiento'].mean()\n",
         "pcva_redondeo = round(pcva)\n",
-        "print(f\"\\n\\n{'Año promedio que se vendio mas juegos por consola'}\\n\\n\",pcva_redondeo)\n",
+        "print(f\"\\n\\n{'Año que se vendio mas juegos por consola'}\\n\\n\",pcva_redondeo)\n",
+        "\n",
+        "##TOTAL DE JUEGOS VENDIDOS POR CONSOLA\n",
         "\n",
         "cma = df.groupby('Consola')['Ventas Totales'].sum()\n",
         "cma = cma.sort_values(ascending=False)\n",
         "cma_redondeo = round(cma)\n",
-        "print(f\"\\n\\n{'Suma total de los juegos mas vendidos por consola'}\\n\\n\",cma_redondeo,f\"\\n\\n{'**El punto marca el millon*'}*\")\n"
+        "print(f\"\\n\\n{'Suma total de los juegos vendidos por consola'}\\n\\n\",cma_redondeo,f\"\\n\\n{'**El punto marca el millon*'}*\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y65uvv94jXcL",
-        "outputId": "c52fbff5-fef0-47cd-b2b9-0fb61bd454c6"
+        "outputId": "f2f89c2f-777e-478a-9c45-f1321d9b37a9"
       },
-      "execution_count": 34,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +857,7 @@
           "text": [
             "\n",
             "\n",
-            "Año promedio que se vendio mas juegos por consola\n",
+            "Año que se vendio mas juegos por consola\n",
             "\n",
             " Consola\n",
             "3DS     2013.0\n",
@@ -877,7 +880,7 @@
             "Name: Año de lanzamiento, dtype: float64\n",
             "\n",
             "\n",
-            "Suma total de los juegos mas vendidos por consola\n",
+            "Suma total de los juegos vendidos por consola\n",
             "\n",
             " Consola\n",
             "PS2     981.0\n",
@@ -916,10 +919,15 @@
     {
       "cell_type": "code",
       "source": [
+        "##GENEROS DE JUEGOS MAS VENDIDO\n",
+        "\n",
         "genero = df.groupby('Genero')['Ventas Totales'].sum()\n",
         "genero_redondeo = round(genero)\n",
         "generos = genero_redondeo.sort_values(ascending=False)\n",
         "print(f\"\\n\\n{'Genero de juegos mas vendidos'}\\n\\n\",generos)\n",
+        "\n",
+        "\n",
+        "##TOP DE LOS GENEROS DE JUEGOS CON MAYOR PUNTAJE PROMEDIO(critica + usuarios)\n",
         "\n",
         "puntaje_genero = df.loc[df[('promedio de puntaje')].notna() & (df['Genero'].notna())].groupby('Genero').agg({'promedio de puntaje':['mean']})\n",
         "puntaje_genero = puntaje_genero.sort_values(by=('promedio de puntaje','mean'), ascending=False)\n",
@@ -930,9 +938,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zJeH7Br1gt1j",
-        "outputId": "80f3fa6f-bd07-48a9-f80b-c345113be62f"
+        "outputId": "d44dd4d4-9467-4efb-8349-a9ec9dab7b3c"
       },
-      "execution_count": 48,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
