--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyPuPoBDj6iuTIozMd9XdmqP",
+      "authorship_tag": "ABX9TyP2OGF3FP8mNAX4ocFXDLVC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 231,
+      "execution_count": null,
       "metadata": {
         "id": "BA5wxy4fm_5b"
       },
@@ -1275,17 +1275,17 @@
         "#PUBLICADOR con los juegos con mayor, menor y el promedio de puntos segun la critica en orden descendente\n",
         "pje_cri_publicador = df.loc[(df['Puntuacion de criticos'] > 0) & (df['Publicador'])].groupby('Publicador').agg({'Puntuacion de criticos':['mean','min','max','count']})\n",
         "pje_cri_publicador = pje_cri_publicador.sort_values(by=('Puntuacion de criticos','mean'), ascending=False)\n",
-        "##print(f\"\\n\\n{'TOP 10 DE LOS PUBLICADORES CON EL PROMEDIO MAS ALTO SEGUN LAS CRITICA'}\\n\\n\",pje_cri_publicador.head(10))\n",
+        "print(f\"\\n\\n{'TOP 10 DE LOS PUBLICADORES CON EL PROMEDIO MAS ALTO SEGUN LAS CRITICA'}\\n\\n\",pje_cri_publicador.head(10))\n",
         "\n",
         "#DESARROLLADOR con los juegos con mayor, menor y el promedio de puntos segun la critica en orden descendente\n",
         "pje_cri_desarrollador = df.loc[(df['Puntuacion de criticos'] > 0) & (df['Desarrollador'])].groupby('Desarrollador').agg({'Puntuacion de criticos':['mean','min','max','count']})\n",
         "pje_cri_desarrollador = pje_cri_desarrollador.sort_values(by=('Puntuacion de criticos','mean'), ascending=False)\n",
-        "##print(f\"\\n\\n{'TOP 10 DE LOS DESARROLLADORES CON EL PROMEDIO MAS ALTO SEGUN LAS CRITICA'}\\n\\n\",pje_cri_desarrollador.head(10))\n",
+        "print(f\"\\n\\n{'TOP 10 DE LOS DESARROLLADORES CON EL PROMEDIO MAS ALTO SEGUN LAS CRITICA'}\\n\\n\",pje_cri_desarrollador.head(10))\n",
         "\n",
         "##JUEGOS con mayor puntuacion segun la critica\n",
         "pje_cri_juegos = df[['Puntuacion de criticos','Juego','Publicador','Año de lanzamiento']]\n",
         "pje_cri_juegos_desc = pje_cri_juegos.sort_values(by='Puntuacion de criticos', ascending=False)\n",
-        "##print(f\"\\n\\n{'TOP 10 DE LOS JUEGOS CON EL PROMEDIO MAS ALTO SEGUN LAS CRITICA'}\\n\\n\",pje_cri_juegos_desc.head(10))##\n"
+        "print(f\"\\n\\n{'TOP 10 DE LOS JUEGOS CON EL PROMEDIO MAS ALTO SEGUN LAS CRITICA'}\\n\\n\",pje_cri_juegos_desc.head(10))##\n"
       ],
       "metadata": {
         "id": "XoEyGMkqlOZE"
@@ -1359,17 +1359,17 @@
         "#PUBLICADOR con los juegos con mayor, menor y el promedio de puntos segun los usuarios en orden descendente\n",
         "pje_usu_publicador = df.loc[(df['Puntaje de Usuario'] > 0) & (df['Publicador'])].groupby('Publicador').agg({'Puntaje de Usuario':['mean','min','max','count']})\n",
         "pje_usu_publicador = pje_usu_publicador.sort_values(by=('Puntaje de Usuario','mean'), ascending=False)\n",
-        "#print(f\"\\n\\n{'TOP 10 DE LOS PUBLICADORES CON EL PROMEDIO MAS ALTO SEGUN LOS USUARIOS'}\\n\\n\",pje_usu_publicador.head(10))\n",
+        "print(f\"\\n\\n{'TOP 10 DE LOS PUBLICADORES CON EL PROMEDIO MAS ALTO SEGUN LOS USUARIOS'}\\n\\n\",pje_usu_publicador.head(10))\n",
         "\n",
         "#DESARROLLADOR con los juegos con mayor, menor y el promedio de puntos segun los usuarios en orden descendente\n",
         "pje_usu_desarrollador = df.loc[(df['Puntaje de Usuario'] > 0) & (df['Desarrollador'])].groupby('Desarrollador').agg({'Puntaje de Usuario':['mean','min','max','count']})\n",
         "pje_usu_desarrollador = pje_usu_desarrollador.sort_values(by=('Puntaje de Usuario','mean'), ascending=False)\n",
-        "#print(f\"\\n\\n{'TOP 10 DE LOS DESARROLLADORES CON EL PROMEDIO MAS ALTO SEGUN LOS USUARIOS'}\\n\\n\",pje_usu_desarrollador.head(10))\n",
+        "print(f\"\\n\\n{'TOP 10 DE LOS DESARROLLADORES CON EL PROMEDIO MAS ALTO SEGUN LOS USUARIOS'}\\n\\n\",pje_usu_desarrollador.head(10))\n",
         "\n",
         "##JUEGOS con mayor puntuacion segun los usuarios\n",
         "pje_usu_juegos = df[['Puntaje de Usuario','Juego','Publicador','Año de lanzamiento']]\n",
         "pje_usu_juegos_desc = pje_usu_juegos.sort_values(by='Puntaje de Usuario', ascending=False)\n",
-        "#print(f\"\\n\\n{'TOP 10 DE LOS JUEGOS CON EL PROMEDIO MAS ALTO SEGUN LOS USUARIOS'}\\n\\n\",pje_usu_juegos_desc.head(10))\n",
+        "print(f\"\\n\\n{'TOP 10 DE LOS JUEGOS CON EL PROMEDIO MAS ALTO SEGUN LOS USUARIOS'}\\n\\n\",pje_usu_juegos_desc.head(10))\n",
         "\n"
       ],
       "metadata": {
@@ -1443,15 +1443,15 @@
         "\n",
         "promedio_des_pje = df.loc[df[('promedio de puntaje')].notna() & (df['Desarrollador'].notna())].groupby('Desarrollador').agg({'promedio de puntaje':['max']})\n",
         "promedios_des_pje = promedio_des_pje.sort_values(by=('promedio de puntaje','max'), ascending=False)\n",
-        "#print(f\"\\n\\n{'Puntuacion total de los Desarrolladores'}\\n\\n\",promedios_des_pje.head(10))\n",
+        "print(f\"\\n\\n{'Puntuacion total de los Desarrolladores'}\\n\\n\",promedios_des_pje.head(10))\n",
         "\n",
         "promedio_pub_pje = df.loc[df[('promedio de puntaje')].notna() & (df['Publicador'].notna())].groupby('Publicador').agg({'promedio de puntaje':['max']})\n",
         "promedios_pub_pje = promedio_pub_pje.sort_values(by=('promedio de puntaje','max'), ascending=False)\n",
-        "#print(f\"\\n\\n{'Puntuacion total de los Publicadores'}\\n\\n\",promedios_pub_pje.head(10))\n",
+        "print(f\"\\n\\n{'Puntuacion total de los Publicadores'}\\n\\n\",promedios_pub_pje.head(10))\n",
         "\n",
         "promedio_pje_juego = df.loc[df[('promedio de puntaje')].notna() & (df['Juego'].notna())].groupby('Juego').agg({'promedio de puntaje':['max']})\n",
         "promedios_pub_juegos = promedio_pje_juego.sort_values(by=('promedio de puntaje','max'), ascending=False)\n",
-        "#print(f\"\\n\\n{'Puntuacion total de los Juegos'}\\n\\n\",promedios_pub_juegos.head(10))\n",
+        "print(f\"\\n\\n{'Puntuacion total de los Juegos'}\\n\\n\",promedios_pub_juegos.head(10))\n",
         "\n"
       ],
       "metadata": {
@@ -1577,34 +1577,34 @@
         "##REGIONES:\n",
         "\n",
         "##ESTADOS UNIDOS\n",
-        "#print(f\"\\n\\n{'VENTAS EN ESTADOS UNIDOS'}\\n\\n\")\n",
-        "#print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en Estados Unidos'}\\n\\n\",venta_usa.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en Estados unidos'}\\n\\n\",ventas_des_usa.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en Estados unidos'}\\n\\n\",ventas_pub_usa.head(10))\n",
+        "print(f\"\\n\\n{'VENTAS EN ESTADOS UNIDOS'}\\n\\n\")\n",
+        "print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en Estados Unidos'}\\n\\n\",venta_usa.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en Estados unidos'}\\n\\n\",ventas_des_usa.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en Estados unidos'}\\n\\n\",ventas_pub_usa.head(10))\n",
         "\n",
         "##EUROPA\n",
-        "#print(f\"\\n\\n{'VENTAS EN EUROPA'}\\n\\n\")\n",
-        "#print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en Europa'}\\n\\n\",venta_euro.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en Europa'}\\n\\n\",ventas_des_euro.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en Europa'}\\n\\n\",ventas_pub_euro.head(10))\n",
+        "print(f\"\\n\\n{'VENTAS EN EUROPA'}\\n\\n\")\n",
+        "print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en Europa'}\\n\\n\",venta_euro.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en Europa'}\\n\\n\",ventas_des_euro.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en Europa'}\\n\\n\",ventas_pub_euro.head(10))\n",
         "\n",
         "##JAPON\n",
-        "#print(f\"\\n\\n{'VENTAS EN JAPON'}\\n\\n\")\n",
-        "#print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en Japon'}\\n\\n\",venta_japon.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en Japon'}\\n\\n\",ventas_des_japon.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en Japon'}\\n\\n\",ventas_pub_japon.head(10))\n",
+        "print(f\"\\n\\n{'VENTAS EN JAPON'}\\n\\n\")\n",
+        "print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en Japon'}\\n\\n\",venta_japon.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en Japon'}\\n\\n\",ventas_des_japon.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en Japon'}\\n\\n\",ventas_pub_japon.head(10))\n",
         "\n",
         "##RESTO DEL MUNDO\n",
-        "#print(f\"\\n\\n{'VENTAS EN RESTO DEL MUNDO'}\\n\\n\")\n",
-        "#print(f\"\\n\\n{'Top 10 de los juegos con mas ventas en el resto del mundo'}\\n\\n\",venta_resto.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los Desarrolladores con mas ventas en el resto del mundo'}\\n\\n\",ventas_des_resto.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en el resto del Mundo'}\\n\\n\",ventas_pub_resto.head(10))\n",
+        "print(f\"\\n\\n{'VENTAS EN RESTO DEL MUNDO'}\\n\\n\")\n",
+        "print(f\"\\n\\n{'Top 10 de los juegos con mas ventas en el resto del mundo'}\\n\\n\",venta_resto.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los Desarrolladores con mas ventas en el resto del mundo'}\\n\\n\",ventas_des_resto.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en el resto del Mundo'}\\n\\n\",ventas_pub_resto.head(10))\n",
         "\n",
         "##MUNDIAL\n",
-        "#print(f\"\\n\\n{'VENTAS EN EL MUNDO'}\\n\\n\")\n",
-        "#print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en el mundo'}\\n\\n\",venta_total.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en el Mundo'}\\n\\n\",ventas_des_total.head(10))\n",
-        "#print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en el Mundo'}\\n\\n\",ventas_pub_total.head(10))\n",
+        "print(f\"\\n\\n{'VENTAS EN EL MUNDO'}\\n\\n\")\n",
+        "print(f\"\\n\\n{'Top 10 de los juegos mas vendidos en el mundo'}\\n\\n\",venta_total.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los desarrolladores con mas ventas en el Mundo'}\\n\\n\",ventas_des_total.head(10))\n",
+        "print(f\"\\n\\n{'Top 10 de los publicadores con mas ventas en el Mundo'}\\n\\n\",ventas_pub_total.head(10))\n",
         "\n",
         "\n"
       ],
@@ -1642,7 +1642,7 @@
         "id": "QRj12cadfHUQ",
         "outputId": "c970d316-b39e-4f25-afe0-6c24c37a8647"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1659,7 +1659,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "SUMA TOTAL DE JUEGOS VENDIDOS POR CONSOLA"
+        "TOTAL DE JUEGOS VENDIDOS POR CONSOLA"
       ],
       "metadata": {
         "id": "kMvF2UESjV5N"
@@ -1684,7 +1684,7 @@
       "metadata": {
         "id": "Y65uvv94jXcL"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1731,7 +1731,7 @@
         "id": "Nwd3dty4ntVX",
         "outputId": "7109a89f-deeb-4a53-e6e7-2c04b86f786d"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1762,19 +1762,19 @@
         "genero = df.groupby('Genero')['Ventas Totales'].sum()\n",
         "genero_redondeo = round(genero)\n",
         "generos = genero_redondeo.sort_values(ascending=False)\n",
-        "#print(f\"\\n\\n{'Genero de juegos mas vendidos'}\\n\\n\",generos)\n",
+        "print(f\"\\n\\n{'Genero de juegos mas vendidos'}\\n\\n\",generos)\n",
         "\n",
         "\n",
         "##TOP DE LOS GENEROS DE JUEGOS CON MAYOR PUNTAJE PROMEDIO(critica + usuarios)\n",
         "\n",
         "puntaje_genero = df.loc[df[('promedio de puntaje')].notna() & (df['Genero'].notna())].groupby('Genero').agg({'promedio de puntaje':['mean']})\n",
         "puntaje_genero = puntaje_genero.sort_values(by=('promedio de puntaje','mean'), ascending=False)\n",
-        "#print(F\"\\n\\n{'Top de los generos con el mayor puntaje promedio'}\\n\\n\",puntaje_genero)"
+        "print(F\"\\n\\n{'Top de los generos con el mayor puntaje promedio'}\\n\\n\",puntaje_genero)"
       ],
       "metadata": {
         "id": "zJeH7Br1gt1j"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1822,7 +1822,7 @@
         "id": "wScHfLTHt4ua",
         "outputId": "a98e8173-da35-4f07-ea92-78a48e0f03d7"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
