--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyP2OGF3FP8mNAX4ocFXDLVC",
+      "authorship_tag": "ABX9TyPc3YY47MZp1PZr/dTLxvDD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,114 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/ProyectoDSParteI%2BDopazo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PROYECTO FINAL - VISUALIZACIONES DE PYTHON"
+      ],
+      "metadata": {
+        "id": "6Ggx6A_g6BSj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PRIMERA ENTREGA"
+      ],
+      "metadata": {
+        "id": "RHE7Dsef6Kvi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Abstract"
+      ],
+      "metadata": {
+        "id": "nmYP9edB5t-b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "En este proyecto trabajamos con el dataset Video_games.csv que contiene información sobre los videojuegos, sus ventas por region, el puntaje segun criticos y usuarios, los publicadores y los desarrolladores de estos mismos.\n",
+        "\n",
+        "El objetivo principal es aplicar técnicas de visualización y análisis exploratorio de datos para identificar patrones relevantes, relaciones entre variables y posibles anomalías o factores que influyen en los video juegos. A través de gráficos univariados, bivariados y multivariados, se buscará responder una serie de preguntas o hipótesis planteadas sobre el comportamiento de los datos.\n",
+        "\n",
+        "El análisis incluye una limpieza previa de datos, identificación de valores perdidos, y selección de variables relevantes. Luego se desarrollan visualizaciones que permiten explorar tendencias, distribuciones y correlaciones. A partir de estos resultados visuales y numéricos se busca brindar una interpretación que permita entender mejor el fenómeno analizado.\n",
+        "\n",
+        "El proyecto se estructura en etapas: definición de preguntas, diagnóstico visual, interpretación, y preparación para análisis posteriores como modelado o segmentación.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qpqGFeGO25sV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Preguntas de interes:**\n",
+        "\n",
+        "1- Cual es el desarrollador con el promedio de puntaje mas alto en sus juegos\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "2- Cual es el juego mas vendido por region y mundialmente\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "3- Cual es el desarrollador con la mayor cantidad de juegos vendidos regional y mundial\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "4- Cual es el juego con mayor puntaje promedio (criticos y usuarios)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "5- Cual es el desarrollador con el promedio de puntaje mas alto en sus juegos\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "6- Cual es la consola que vendio mas juegos en el mundo\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "7- Que empresa es la mas probable que consiga sacar al mercado un juego de 9 puntos o mas\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "8- Para donde se dirige la tendencia del genero de juego, es decir que genero es mas probable que los usuarios elegin al momento de jugar\n"
+      ],
+      "metadata": {
+        "id": "-2WPzFRN6TnA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# *# VISUALIZACIONES Y ANALISIS*"
+      ],
+      "metadata": {
+        "id": "0FLTixer7Mnk"
+      }
     },
     {
       "cell_type": "code",
