--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyPyPFGrNSJ1hvAFonZU7nQN",
+      "authorship_tag": "ABX9TyO8bBN2XELHA/5TelyYw+Ww",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2405,12 +2405,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "C7WIYjbPm6Fw",
-        "outputId": "5c3e5ffa-3837-4f79-ea1d-97503bf05a28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "C7WIYjbPm6Fw",
+        "outputId": "5c3e5ffa-3837-4f79-ea1d-97503bf05a28"
       },
       "execution_count": 93,
       "outputs": [
@@ -2425,6 +2425,28 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusiones Preliminares"
+      ],
+      "metadata": {
+        "id": "_BkDwPpg5EOG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Las conclusiones que puedo realizar hasta ahora despues de haber generado los graficos es que los juegos mejor puntuados que segun el dataframe\n",
+        "son los RPG, no son los mas vendidos, la mayoria de los jugadores de videojuegos tienden a elegir los juegos de deportes o miscelaneas.\n",
+        "Otra conclusion es que la evaluacion de los puntajes entre los usuarios y los criticos hacia los juegos difieren en el top 10 realizado\n",
+        "Primera teoria que me genera es que la mayoria de la poblacion de jugadores les gusta mas los juegos multiplayer, que los juego singleplayer.\n",
+        "Aunque no se cumple en todas las regiones, por ejemplo en la region de Japon y el resto del mundo eligen otras preferencias en su mayoria."
+      ],
+      "metadata": {
+        "id": "nfE7IEpB5E25"
+      }
     }
   ]
 }
