--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyMPZVAxXG4/Lj+AJCbre9GL",
+      "authorship_tag": "ABX9TyOgXQHDE1GyqnAHjIH4N3Be",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,25 +78,25 @@
       "source": [
         "**Preguntas de interes:**\n",
         "\n",
-        "1- Cual es el mejor juego segun la critica\n",
+        "1- Cual es el mejor genero segun la critica\n",
         "\n",
         "\n",
         "---\n",
         "\n",
         "\n",
-        "2- Cual es el mejor juego segun los usuarios\n",
+        "2- Cual es el mejor genero segun los usuarios\n",
         "\n",
         "\n",
         "---\n",
         "\n",
         "\n",
-        "3- Cual es el juego con mayor puntaje promedio (criticos y usuarios)\n",
+        "3- Cual es el juego mejor genero en general (criticos y usuarios)\n",
         "\n",
         "\n",
         "---\n",
         "\n",
         "\n",
-        "4- Cual es la consola que vendio mas juegos en el mundo\n",
+        "4- Que tan cercano o lejano estan los generos mas populares y los que tienen mayor puntuacion promedio\n",
         "\n",
         "\n",
         "---\n",
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "BA5wxy4fm_5b"
       },
@@ -1396,7 +1396,7 @@
         },
         "outputId": "60809b11-2863-44a9-b04b-6ccbc1b89cd9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,7 +1506,7 @@
         "id": "S7bQgMQxd9Ns",
         "outputId": "d9493ac1-a4a6-43ee-d047-c4f2cb2bd412"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1598,7 +1598,7 @@
         "id": "uuae9ba5Q614",
         "outputId": "a4841059-a2e3-4138-921b-0bb9842f0830"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1646,7 +1646,7 @@
         },
         "outputId": "39cfb965-d9d2-46b4-e345-83280278d542"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1746,7 +1746,7 @@
         "id": "KKPGnpjLRWNP",
         "outputId": "f53e30bd-0143-4834-bc0f-292cd3c7281b"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1793,7 +1793,7 @@
         },
         "outputId": "e7195152-dc69-4ab7-991f-7126bcced797"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1893,7 +1893,7 @@
         "id": "wScHfLTHt4ua",
         "outputId": "b03cba23-16ec-4b8b-acd3-4c1209fd788e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2035,7 +2035,7 @@
         },
         "outputId": "2da062c5-42aa-46fa-df02-de68cb023215"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2412,7 +2412,7 @@
         "id": "C7WIYjbPm6Fw",
         "outputId": "5c3e5ffa-3837-4f79-ea1d-97503bf05a28"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
