--- a/ProyectoDSParteI+Dopazo.ipynb
+++ b/ProyectoDSParteI+Dopazo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyMeOt6ySMTVqBxHDNFNjy1g",
+      "authorship_tag": "ABX9TyPL4j5UI8lnOSd8LPu+eaqY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1985,12 +1985,12 @@
         "print(\"-\" * 70)"
       ],
       "metadata": {
-        "id": "PKU0gQ_jBdCU",
-        "outputId": "1c2ff59f-cc40-4e59-d46e-0656fe5d965b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 981
-        }
+        },
+        "id": "PKU0gQ_jBdCU",
+        "outputId": "1c2ff59f-cc40-4e59-d46e-0656fe5d965b"
       },
       "execution_count": 46,
       "outputs": [
@@ -2140,12 +2140,12 @@
         "print(\"=\"*60)"
       ],
       "metadata": {
-        "id": "4hQJTH3TFMso",
-        "outputId": "129be173-8164-44b8-f2f1-6cc0c9c3fed1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "4hQJTH3TFMso",
+        "outputId": "129be173-8164-44b8-f2f1-6cc0c9c3fed1"
       },
       "execution_count": 29,
       "outputs": [
@@ -2326,12 +2326,12 @@
         "        print(f\"   {pos_icon} {consola:<18} {ventas:>8.2f}M {porcentaje:>6.1f}%   {pos}°\")"
       ],
       "metadata": {
-        "id": "VgK2z5k9531v",
-        "outputId": "fdf09be8-7cad-462e-ecf8-9f22c8233f64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "VgK2z5k9531v",
+        "outputId": "fdf09be8-7cad-462e-ecf8-9f22c8233f64"
       },
       "execution_count": 24,
       "outputs": [
@@ -2452,7 +2452,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# TOP 10 DE LOS JUEGOS MAS VENDIDOS POR REGION"
+        "# TOP 5 DE LOS JUEGOS MAS VENDIDOS POR REGION"
       ],
       "metadata": {
         "id": "6-F9pe8qll50"
@@ -2830,9 +2830,9 @@
           "height": 1000
         },
         "id": "C7WIYjbPm6Fw",
-        "outputId": "fb69fa91-d832-406a-8cc9-69cd1f57de41"
+        "outputId": "fd355557-234b-4705-eedd-f58c2cb236ad"
       },
-      "execution_count": 13,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2848,8 +2848,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "nfE7IEpB5E25"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "# VENTAS JUEGOS POR REGION 2000-2014"
+        "# VENTAS POR REGION 2000-2014"
       ],
       "metadata": {
         "id": "QF7x9xcCIcwL"
